<resources>
    <string name="app_name">Rest Stopping</string>
    <string name="full_version_text">v%1$s b%2$s</string>

    <string name="ganaly_key"></string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="map_your_location">Your Location!</string>
    <string name="map_cust_loc">Custom location!</string>

    <string name="snack_error_okay">Okay</string>
    <string name="snack_error_load">There was an error!</string>
    <string name="snack_error_loc">There was an error getting your location!</string>
    <string name="snack_nothing_found">There was nothing found!</string>

    <string name="ab_settings">Settings</string>
    <string name="settings_show_all">Show All Locations (May experience poor performance)</string>
    <string name="settings_distance_val">Search Distance</string>
    <string name="settings_use_mes">Use Metric System?</string>
    <string name="settings_custom_loc">Use custom location?</string>
    <string name="settings_custom_loc_text">Custom Location</string>
    <string name="settings_pick_loc">Click to Pick Location</string>
    <string name="ab_pick_loc">Pick Location</string>

    <string name="settings_sat">Use Satellite maps?</string>

    <string name="zeen_text">Zeen - Building Road Awareness \n Fully featured mapping app. Community reports, turn by turn navigation, Augmented Reality, Local information, searching, and more!</string>

    <string name="main_dialog_title">Nearby</string>
    <string name="main_dialog_close">Close</string>

    <string name="ab_about">About</string>
    <string name="about_built_by">Built by</string>
    <string name="about_zeen_remove">You can remove the banner ad by installing Zeen - Building Road Awareness! (you can also click here to go directly to the Play Store listing)</string>
    <string name="about_zeen_dev">Check out all our Apps!</string>
    <string name="about_email">Send us an Email</string>
    <string name="about_twitter">Tweet Us</string>
</resources>
