<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/settings_custom_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_custom_loc"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/settings_custom_loc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_custom_loc_text"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/settings_custom_loc_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_pick_loc"
            android:layout_marginLeft="12dp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/settings_show_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_show_all"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/settings_distance_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_distance_val"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/settings_distance_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="number"
            android:maxLength="3" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/settings_mes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_use_mes"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/settings_sat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_sat"
        android:textSize="12sp" />
</LinearLayout>